resources/css/style.css
/*

ORANGE COLOR: #cf6d17

*/

/*------------------------------------------------- */
/* BASIC SETUP*/
/*--------------------------------------------------*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
} 

html {
    background: #fff;
    color:#555;
    font-family: 'Lato', 'Ariel',sans-serif;
    font-size: 20px;
    font-weight: 300;
    text-rendering: optimizeLegibility;
}

.clearfix {zoom:1}
.clearfix:after {
    content: '.';
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}
/*------------------------------------------------- */
/* REUSABLE COMPONENTS*/
/*--------------------------------------------------*/
.row {
    max-width: 1140px;
    margin: 0 auto; 
}

section {
    padding:80px 0;
    
}

box {
    padding: 1%;
}
/*----------ICONS-----------*/
.icon-big {
    font-size: 350%;
    display: block;
    color: #cf6d17;
    margin-bottom: 10px;
}

.icon-small {
    display: inline-block;
    width: 30px;
    text-align: center;
    color: #cf6d17;
    font-size: 120%;
    
    /*secrets to align text and icons*/
    line-height: 120%;
    vertical-align: middle;
    margin-top: -5px;
    margin-right: 10px;
    
}



/*----------HEADINGS-----------*/
h1,
h2,
h3 {
   
    font-weight: 300;
    text-transform: uppercase;
    
    
    
}
h1{
    margin-top:0;
    margin-bottom: 20px;
    color: #fff;
    font-size: 240%;
    word-spacing: 4px;
    letter-spacing: 1px;
}
h2{
    font-size: 180%;
    word-spacing: 2px;
    text-align: center;
    margin-bottom: 30px;
    letter-spacing: 1px;
}

h3{
    font-size: 110%; 
    margin-bottom: 15px;
}
h2:after {
    display:block; 
    height: 2px;
    background-color: #cf6d17;
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 30px;
}


/*-----------PARAGRAPHS----------*/

.long-copy {
    line-height: 145%;
    width: 70%;
    margin-left: 15%;
    margin-bottom: 50px;
    font-size: 100%;
    text-align: center;
}

.box p {
    font-size: 90%;
    line-height: 145%;
}
/*-----------LINKS------------*/

a:link,
a:visited {
    text-decoration: none; 
    color: #cf6d17;
    padding-bottom: 2px;
    border-bottom: 1px solid #cf6d17;
    transition: border-bottom 0.2s, color 0.2s;
    
}

a:hover,
a:active {
    color: #555;
    border-bottom: 1px solid transparent; 
}
/*-----------BUTTONS------------*/
.btn:link,
.btn:visited {
    display: inline-block;
    padding: 10px 30px; 
    font-weight: 300;
    text-decoration: none; 
    border-radius: 200px;
    transition: background-color 0.2s, border 0.2s, color 0.2s;
    
}

.btn-full:link,
.btn-full:visited {
    background: #e67e22; 
    border: 1px solid #e67e22;
    color: #fff; 
    margin-right: 15px;
}

.btn-ghost:link,
.btn-ghost:visited {
    border: 1px solid #e67e22;
    color: #e67e22;
}

.btn:hover,
.btn:active {
    background-color: #cf6d17;
}


.btn-full:hover,
.btn-full:active {
    
    border: 1px solid #cf6d17; 
}

.btn-ghost:hover,
.btn-ghost:active {
    border: 1px solid #cf6d17;
    color: #fff;
}

/*------------------------------------------------- */
/* HEADER*/
/*--------------------------------------------------*/
header {
    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    height: 100vh; 
}

.hero-text-box {
    position:absolute;
    width: 1140px;
    top:50%;
    left: 50%;
    transform: translate(-50%, -50%)
}

.logo {
    height:100px;
    width: auto;
    float: left;
    margin-top: 20px;
    
}

.main-nav {
    float: right;
    list-style: none;
    margin-top:55px;
    
}

.main-nav li {
    display: inline-block;
    margin-left: 40px;
}

.main-nav li a:link,
.main-nav li a:visited {
    padding:8px 0;
    color:#fff;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 90%;
    border-bottom: 2px solid transparent; 
    transition: border-bottom 0.2s;
   
}

.main-nav li a:hover,
.main-nav li a:active {
    border-bottom: 2px solid #cf6d17; 
}


/*------------------------------------------------- */
/* FEATURES*/
/*--------------------------------------------------*/

.section-features .long-copy {
    margin-bottom: 30px; 
}

/*------------------------------------------------- */
/* MEALS*/
/*--------------------------------------------------*/

.section-meals {
    padding:0;
}
.meals-showcase {
    list-style: none;
    width: 100%;
}

.meals-showcase li{
    display: block;
    float:left;
    width: 25%;
    
}

.meal-photo {
    width: 100%;
    margin: 0;
    overflow: hidden;
    background-color: #000;
}

.meal-photo img{
    opacity: 0.7;
    width: 100%;
    height: auto;
    transform:scale(1.15);
    transition:transform 0.5s, opacity 0.5s;
    
}

.meal-photo img:hover {
    transform: scale(1.03);
    opacity: 1.0;
}

/*------------------------------------------------- */
/* HOW IT WORKS*/
/*--------------------------------------------------*/

.section-steps {
    background-color: #f4f4f4;
}

.steps-box:first-child {
    text-align: right;
    padding-right: 3%;
    margin-top:30px;
}

.steps-box:last-child {
    padding-left: 3%;
    margin-top:70px;
    
}

.app-screen {
    width:40%;
}

.works-step {
    margin-bottom: 50px;
}

.works-step:last-of-type {
    /*All the other steps will have margin or 50px except for the last one*/
   margin-bottom: 80px; 
}
.works-step div {
    color: #cf6d17;
    border: 2px solid #cf6d17;
    display: inline-block; /* prevents force line break*/
    border-radius: 50%;
    height: 55px;
    width: 55px;
    text-align: center;
    padding: 5px;
    float: left;
    font-size: 150%;
    margin-right:25px;
}

.btn-app:link,
.btn-app:visited {
    border: 0; /*Dissapea the underline in the images*/
}

.btn-app img {
    height:50px;
    width:auto;
    margin-right: 10px;
    text-decoration: none; /*get rid of the underline */
}


/*------------------------------------------------- */
/* CITIES*/
/*--------------------------------------------------*/

.box img {
    width: 100%;
    height:auto;
    margin-bottom: 15px;
}

.city-feature{
    margin-bottom:  5px;
}

/*------------------------------------------------- */
/* TESTIMONIALS*/
/*--------------------------------------------------*/

.section-testimonials {
    background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
    background-attachment: fixed;
    background-size: cover; /*covers whole section with the backgroun BEST PRACTICE*/
    color: #fff;
}

blockquote {
    padding: 2%;
    font-style: italic;
    line-height: 145%;
    position: relative;
    margin-top: 40px;
}

blockquote:before {
    content: "\201C";
    font-size: 500%;
    display: block;
    position: absolute;
    top: -5px;
    left: -3px;
}

cite {
    font-size:90%;
    margin-top: 25px;
    display: block; /* breaks the line to not bunch up everything*/
}
cite img {
    height 450px;
    border-radius: 50%;
    margin-right: 10px;
    vertical-align: middle;
}

/*------------------------------------------------- */
/* SIGN-UP */
/*--------------------------------------------------*/

.section-plans {
    background-color: #f4f4f4;
}

.plan-box {
    background-color: #fff;
    border-radius: 5px;
    width: 90%;
    margin-left: 5%;
    box-shadow: 0 2px 2px #efefef;
    
}

.plan-box div{
    padding: 15px;
    border-bottom: 1px solid #e8e8e8;
    
}

.plan-box div:first-child{
    background-color: #fcfcfc;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.plan-box div:last-child {
    text-align: center;
    border: 0;
}
.plan-price {
    font-size:300%;
    margin-bottom: 10px;
    font-weight: 200;
    color: #cf6d17;
    
}

.plan-price span{
    font-size: 30%;
    font-weight: 300;
}
.plan-price-meal {
    font-size: 80%;
}

.plan-box ul {
    list-style: none;
    
}

.plan-box li{
    padding:5px 0; 
}

.btn-

